# manga-ZHTWTranslator

./: .gitignore  README.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.1.0.md  pyproject.toml
modelfile for local LLM/: Modelfile
translator/: anki_helper.py  anki_settings.py  build_exe_onefile.py  history_manager.py  translator.py  使用說明.txt
